--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>first project clock </title>
 </head>
 <body>
+    <!-- <h1 id="project">My first js project  </h1> -->
   <div class="clock">
     <div class="hand hour" data-hour-hand></div>
     <div class="hand minute" data-minute-hand></div>
